syntax = "proto3";

package synapsis.v1;

import "google/protobuf/timestamp.proto";
option  go_package = "github.com/khafidprayoga/synapsis-service/v1;synapsisv1";

message User{
    string id = 1;
    string fullName = 2;
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp dob = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

// ======== Service ========
message CreateUserRequest{
  string fullName = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp dob = 5;
}

message CreateUserResponse{
  User user = 1;
}